--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,30 +3,37 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
+  overflow: hidden;
   align-items: center;
   margin: 0;
   padding: 0;
+  box-sizing:border-box;
+  background: #808080;
+  /* border: 4px solid blueviolet; */
 }
 
 .Home-main-wrapper {
   position: absolute;
   top: 0; bottom: 0;
-  background-color: none;
+  overflow: hidden;
+  background-color: transparent;
   display: flex;
-  justify-content: flex-start;
-  align-items: 'center';
-  border: 1px solid white;
-  color: white;
+  justify-content: center;
+  /* align-items: center; */
+  box-sizing:border-box;
+  border: 1px dashed white;
+  color: black;
+  /* background: #f2f2f2; */
 }
 
 h1 {
-  color: white;
-  font-weight: 400;
+  color: inherit;
+  font-weight: 600;
 }
 
 .Home-background {
-  background-image: url("./images/photo-tropical-island.jpg");
-  background-color: #d7d8d3;
+  /* background-image: url("./images/photo-tropical-island.jpg"); */
+  background-color: transparent;
   position: fixed;
   top: 0;
   right: 0;
@@ -39,17 +46,3 @@ h1 {
   opacity: 1;
 }
 
-.Home-nav-bottom {
-  width: 100%;
-  height: 56px;
-  border-radius: 28px;
-  background-color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-}
-
-.border-red {
-  border: 1px solid red;
-}
