--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   box-sizing:border-box;
   background: #808080;
-  /* border: 4px solid blueviolet; */
+  color: white;
 }
 
 .Home-main-wrapper {
@@ -32,7 +32,7 @@ h1 {
 }
 
 .Home-background {
-  /* background-image: url("./images/photo-tropical-island.jpg"); */
+  background-image: url("./images/photo-tropical-island.jpg");
   background-color: transparent;
   position: fixed;
   top: 0;
